[package]
name = "tobj"
version = "2.0.4"
edition = "2018"
authors = ["Will Usher <will@willusher.io>"]

description = "A lightweight OBJ loader in the spirit of tinyobjloader"
homepage = "https://github.com/Twinklebear/tobj"
documentation = "https://docs.rs/tobj/"
repository = "https://github.com/Twinklebear/tobj"
readme = "README.md"
keywords = ["obj", "wavefront", "graphics"]
license = "MIT"

exclude = [
    "*.obj",
    "*.mtl",
    ".travis.yml",
]

[features]
default = ["ahash"]
discard_trivial_indices = []

[dependencies]
log = { version = "0.4.14", optional = true }
ahash = { version = "0.7.2", optional = true }

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 3
