[package]
name = "tobj"
version = "3.2.2"
edition = "2018"
authors = ["Will Usher <will@willusher.io>", "Moritz Moeller <virtualritz@protonmail.com>"]

description = "A lightweight OBJ loader in the spirit of tinyobjloader"
homepage = "https://github.com/Twinklebear/tobj"
documentation = "https://docs.rs/tobj/"
repository = "https://github.com/Twinklebear/tobj"
readme = "README.md"
keywords = ["obj", "wavefront", "graphics"]
license = "MIT"

exclude = [
    "*.obj",
    "*.mtl",
    ".travis.yml",
]

[features]
default = ["ahash"]
merging = []
reordering = []
async = []
arbitrary = ["arbitrary/derive"]

[dependencies]
arbitrary = { version = "1.1.3", optional = true }
ahash = { version = "0.7.6", optional = true }
log = { version = "0.4.16", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"

[profile.dev]
split-debuginfo = "unpacked"
opt-level = 3

[package.metadata.docs.rs]
features = ["log", "merging", "reordering", "async"]
