[package]
name = "tobj"
version = "4.0.2"
edition = "2021"
authors = ["Will Usher <will@willusher.io>", "Moritz Moeller <virtualritz@protonmail.com>"]
description = "A lightweight OBJ loader in the spirit of tinyobjloader"
homepage = "https://github.com/Twinklebear/tobj"
documentation = "https://docs.rs/tobj/"
repository = "https://github.com/Twinklebear/tobj"
readme = "README.md"
categories = ["graphics", "games", "visualization", "rendering::data-formats", "parsing "]
keywords = ["3d", "obj", "wavefront", "graphics", "parser"]
license = "MIT"

exclude = [
    "*.obj",
    "*.mtl",
    ".travis.yml",
    "fuzz/*",
]

[features]
default = ["ahash"]
merging = []
reordering = []
async = []
arbitrary = ["arbitrary/derive"]
use_f64 = []

[dependencies]
arbitrary = { version = "1.3.0", optional = true }
ahash = { version = "0.8.7", optional = true }
log = { version = "0.4.17", optional = true }

[dev-dependencies]
tokio-test = "0.4.2"
float_eq = "1.0.1"

[package.metadata.docs.rs]
features = ["log", "merging", "reordering", "async", "use_f64"]
